2002-07-04  Keisuke Nishida  <knishida@netlab.jp>

	* codegen.c (output_file_name): Rename `cob_file_desc' to `cob_file'.

2002-07-04  Keisuke Nishida  <knishida@netlab.jp>

	* codegen.c (output_field_definition): New arguments `gen_data'
	and `gen_filler'.
	(output_file_name, codegen): Updated.
	* parser.y (screen_option): Set LINE/COLUMN flags appropriately.
	(screen_plus_minus): PLUS/MINUS flags.

2002-07-03  Keisuke Nishida  <knishida@netlab.jp>

	* parser.y (program_sequence): Removed.

2002-07-01  Keisuke Nishida  <knishida@netlab.jp>

	* tree.h (cobc_field): New members: f.screen, screen_line,
	screen_column, screen_from, screen_to, and screen_flag.
	* codegen.h (screen_storage): New members: enable_screen and
	screen_storage.
	* codegen.c (output_screen_definition): New function.
	(output_tree): Output screen data.
	(codegen): Output screen definition.
	* parser.y (special_name): Add CURSOR and CRT STATUS.
	(screen_section): New rules.
	(accept_statement, display_statement): Support screen data.
	* reserved.c (reserved_words): Add related tokens.

2002-06-26  Keisuke Nishida  <knishida@netlab.jp>

	* tree.c (compute_size): Handle SIGN SEPARATE only for numeric fields.
	* parser.y (validate_field): Don't throw error for multiple redefines.

2002-06-26  Keisuke Nishida  <knishida@netlab.jp>

	* cobc.c, cobc.h (cobc_flags): New variable.
	(LINK_STATIC, LINK_DYNAMIC): Removed.
	(cobc_main_flag, cobc_debug_flag, cobc_verbose_flag)
	(cobc_optimize_flag, cobc_failsafe_flag, cobc_link_style): Removed.
	* codegen.c (codegen, output_expr, output_line_directive): Updated.
	* inline.c (output_call_statement): Updated.

2002-06-24  Keisuke Nishida  <knishida@netlab.jp>

	* parser.y (delete_statement, read_statement, start_statement)
	(write_statement): set $$ instead of current_file_name.
	(at_end, opt_invalid_key): Updated.

2002-06-18  Keisuke Nishida  <knishida@netlab.jp>

	* Makefile.am (cobc_LDADD): Add LIBCOB_LIBS.
